--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:       呀哈哈的日志
 email:       chen3961@qq.com
 author:      陈哲
-description: "聚沙成塔."
+description: "聚沙成塔"
 baseurl:     ""
 url:         "https://chen3961.github.io"
 date_format: "%b %-d, %Y"
